Working on displaying weather icon

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 
     <section class="col-8" id="current-section">
-      <h2 class="text-center">Current City</h2>
+      <h2 class="text-center">Current Weather</h2>
     </section>
 
     <section class="col-4" id="past-searches">
@@ -47,7 +47,7 @@
     <h4>Created By Kirk Hagglund</h4>
   </footer>
 
-
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js" integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
   <script src="./assets/script.js"></script>
 </body>
 
