Finished date display on forecast cards

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
       <div class="past-cards" id="past-cards"></div>
     </section>
 
-    <section class="col-8 forecast-cards" id="forecast-section">Forecast Section</section>
+    <section class="col-8 forecast-cards" id="forecast-section">
+      
+    </section>
   </main>
 
   <footer class="footer container-fluid text-center" id="footer-section">
